Configure CORS via environment variable for backend

--- a/Readme
+++ b/Readme
@@ -71,8 +71,11 @@
 ## Задеплоенное приложение
 
 **Ссылка на рабочую версию приложения:**
+**Ссылка на рабочую версию фронтенда**
+[https://sergius-hackathon-frontend.onrender.com/]
 
-[**ЗДЕСЬ_БУДЕТ_ВАША_ССЫЛКА_НА_ДЕПЛОЙ**]
+**Ссылка на рабочую версию бекенда**
+[https://sergius-hackathon-backend.onrender.com/]
 
 
 *Автор: [SERHII NIEKRITOV]*
