--- a/Readme
+++ b/Readme
@@ -1,3 +1,4 @@
+**Важное примечание:** В ходе разработки бэкенд был существенно доработан для корректной работы с базой данных SQLite и исправления изначальных проблем с хранением данных и реализацией API.
 # Trood Community Hackathon Project
 
 Платформа для управления IT-проектами и связанными с ними вакансиями, разработанная в рамках хакатона Trood Community.
@@ -6,7 +7,6 @@
 
 Веб-приложение, позволяющее пользователям создавать проекты, описывать их требования (опыт, дедлайн), добавлять открытые вакансии к этим проектам и управлять ими. Приложение состоит из React SPA (Vite + JavaScript) для фронтенда и API на Go (Gin + SQLite) для бэкенда.
 
-**Важное примечание:** В ходе разработки бэкенд был существенно доработан для корректной работы с базой данных SQLite и исправления изначальных проблем с хранением данных и реализацией API.
 
 ## Стек технологий
 
@@ -29,7 +29,7 @@
 *   Docker и Docker Compose
 
 **Инструкции:**
-1.  Клонировать репозиторий: `git clone <your-repo-url>`
+1.  Клонировать репозиторий: `git clone https://github.com/SSSergiy/sergius-hackathon-front.git`
 2.  `cd <repo-folder>`
 3.  Запустить: `docker-compose up --build -d`
 4.  Открыть приложение:
@@ -47,8 +47,8 @@
 *   Компилятор C (GCC/Clang) для Cgo (драйвер SQLite)
 
 **Инструкции:**
-1.  Клонировать репозиторий: `git clone <your-repo-url>`
-2.  `cd <repo-folder>`
+1.  Клонировать репозиторий: `git clone https://github.com/SSSergiy/sergius-hackathon-front.git`
+2.  `cd sergius-hackathon-front`
 3.  **Запустить Бэкенд:**
     *   `cd backend`
     *   `go mod tidy`
